--- a/restful_sql-api/forntend_restaurant/index.html
+++ b/restful_sql-api/forntend_restaurant/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Restaurant</title>
+    
     <script src="./index.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <link rel="stylesheet" href="index.css">
+
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet">
@@ -19,7 +22,7 @@
 <body>
 
     <div class="container text-center">
-        <h1>MY RESTAURANT</h1>
+        <h1 style="margin-top: 50px; margin-bottom: 30px;  ">MY RESTAURANT</h1>
 
         <div id="restaurants" class="row">
         </div>
